--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="StarterCode/static/js/PopulateDropDown.js"></script>
+    <script src="PopulateDropDown.js"></script>
     <script src="StarterCode/static/js/bar2.js"></script>
     <script src="StarterCode/static/js/demo.js"></script>
     <script src="StarterCode/static/js/bar1.js"></script>
