--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="PopulateDropDown.js"></script>
-    <script src="StarterCode/static/js/bar2.js"></script>
-    <script src="StarterCode/static/js/demo.js"></script>
-    <script src="StarterCode/static/js/bar1.js"></script>
-    <script src="StarterCode/static/js/bubble.js"></script>
+    <script src="bar2.js"></script>
+    <script src="demo.js"></script>
+    <script src="bar1.js"></script>
+    <script src="bubble.js"></script>
 
 </body>
 
